# ic-tee

./: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json
.github/workflows/: build-dockers.yml  publish-crates.yml  release.yml  test.yml
nitro_enclave/: amd64.Dockerfile  arm64.Dockerfile  host_iptables-config.sh  host_iptables.sh  setup.sh  supervisord.conf
src/declarations/ic_tee_identity/: ic_tee_identity.did.js  index.d.ts  index.js
src/declarations/ic_tee_identity_canister/: ic_tee_identity_canister.did.d.ts  ic_tee_identity_canister.did.js  index.d.ts  index.js
src/ic_tee_agent/: Cargo.toml  README.md
src/ic_tee_agent/src/: agent.rs  crypto.rs  http.rs  identity.rs  lib.rs  setting.rs
src/ic_tee_agent/src/http/: authentication.rs  content.rs  mod.rs
src/ic_tee_cdk/: Cargo.toml  README.md
src/ic_tee_cdk/src/: identity.rs  lib.rs
src/ic_tee_cli/: Cargo.toml  README.md
src/ic_tee_cli/src/: main.rs
src/ic_tee_daemon/: Cargo.toml  README.md
src/ic_tee_daemon/src/: helper.rs  ip_to_vsock_transparent.rs  main.rs  vsock_to_ip.rs
src/ic_tee_gateway_sdk/: Cargo.toml  README.md
src/ic_tee_gateway_sdk/src/: client.rs  crypto.rs  http.rs  lib.rs
src/ic_tee_host_daemon/: Cargo.toml  README.md
src/ic_tee_host_daemon/src/: helper.rs  main.rs  vsock_to_ip_transparent.rs
src/ic_tee_identity/: Cargo.toml  README.md  ic_tee_identity.did
src/ic_tee_identity/src/: api.rs  api_init.rs  lib.rs  store.rs  types.rs
src/ic_tee_identity_canister/: Cargo.toml  README.md  ic_tee_identity_canister.did
src/ic_tee_identity_canister/src/: api_init.rs  lib.rs  store.rs
src/ic_tee_logtail/: Cargo.toml  README.md
src/ic_tee_logtail/src/: main.rs
src/ic_tee_nitro_attestation/: Cargo.toml  README.md
src/ic_tee_nitro_attestation/src/: attestation.rs  lib.rs  types.rs
src/ic_tee_nitro_attestation/src/test/: attestation2.hex
src/ic_tee_nitro_gateway/: Cargo.toml  README.md
src/ic_tee_nitro_gateway/src/: attestation.rs  crypto.rs  handler.rs  main.rs
src/ic_tee_sdk/: Cargo.toml  README.md
src/ic_tee_sdk/src/: identity.rs
