[workspace]
members = [
  "src/ic_tee_agent",
  "src/ic_tee_cdk",
  "src/ic_tee_cli",
  "src/ic_tee_identity",
  "src/ic_tee_nitro_attestation",
  "src/ic_tee_nitro_gateway",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ldclabs/ic-tee"
keywords = ["tee", "canister", "icp", "nitro"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = [
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
candid = "0.10"
ciborium = "0.2"
const-hex = "1"
lazy_static = "1.5"
serde = "1"
serde_json = "1"
serde_bytes = "0.11"
p384 = { version = "0.13" }
sha2 = "0.10"
sha3 = "0.10"
ic-cdk = "0.16"
ic-stable-structures = "0.6"
ic-canister-sig-creation = "1.1"
ic-certification = "2.6"
ic-agent = "0.39"
ic_cose_types = "0.3"
getrandom = { version = "0.2", features = ["custom"] }
coset = "0.3.8"
x509-parser = { version = "0.16.0" }
ed25519-consensus = "2.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
aws-nitro-enclaves-nsm-api = "0.4"
futures = "0.3"
log = "0.4"
structured-logger = "1"
http = "1"
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
mime = "0.3"
rustis = { version = "0.13", features = ["pool"] }
base64 = "0.22"
