[package]
name = "ic_tee_agent"
description = "An agent to interact with the Internet Computer for Trusted Execution Environments (TEEs)"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_agent"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.2" }
base64 = { workspace = true }
candid = { workspace = true }
ed25519-consensus = { workspace = true }
x25519-dalek = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ic-agent = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic-types = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-crypto-standalone-sig-verifier = { workspace = true }
ic-crypto-secp256k1 = { workspace = true }
ic-crypto-ed25519 = { workspace = true }

[dev-dependencies]
const-hex = { workspace = true }
