[package]
name = "ic_tee_agent"
description = "An agent to interact with the Internet Computer for Trusted Execution Environments (TEEs)"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_agent"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
http = { workspace = true }
axum-core = { workspace = true }
candid = { workspace = true }
ed25519-consensus = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
ic-agent = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_auth_types = { workspace = true }

[dev-dependencies]
