[package]
name = "ic_tee_cdk"
description = "A Canister Development Kit to make Trusted Execution Environments (TEEs) work with the Internet Computer"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_cdk"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic_auth_types = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
