[package]
name = "ic_tee_cli"
description = "A command-line tool implemented in Rust for the IC-TEE."
publish = true
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_cli"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true, features = ["value", "printer"] }
axum-server = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
sha3 = { workspace = true }
const-hex = { workspace = true }
ic-agent = { workspace = true }
ed25519-consensus = { workspace = true }
ic_cose_types = { workspace = true }
rand = { workspace = true }
anyhow = "1"
clap = { version = "=4.5", features = ["derive"] }
pkcs8 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.1" }
ic_tee_agent = { path = "../ic_tee_agent", version = "0.1" }
ic_tee_nitro_attestation = { path = "../ic_tee_nitro_attestation", version = "0.1" }
