[package]
name = "ic_tee_cli"
description = "A command-line tool implemented in Rust for the IC-TEE."
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_cli"
version = "0.3.2"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true, features = ["value", "printer"] }
serde_bytes = { workspace = true }
tokio = { workspace = true }
const-hex = { workspace = true }
ic-agent = { workspace = true }
ed25519-consensus = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { version = "=4.5", features = ["derive"] }
pkcs8 = { version = "0.10", features = ["pem"] }
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.3" }
ic_tee_agent = { path = "../ic_tee_agent", version = "0.3" }
ic_tee_nitro_attestation = { path = "../ic_tee_nitro_attestation", version = "0.3" }
