[package]
name = "ic_tee_gateway_sdk"
description = "The rust SDK for the IC TEE Gateway"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_gateway_sdk"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.5" }
http = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
ic-secp256k1 = { workspace = true }
ic-ed25519 = { workspace = true }
ic_auth_types = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }

[dev-dependencies]
