[package]
name = "ic_tee_identity"
description = "An on-chain authentication service for Trusted Execution Environments (TEEs) on the Internet Computer."
publish = false
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_identity"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-certification = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.1" }
ic_tee_nitro_attestation = { path = "../ic_tee_nitro_attestation", version = "0.1" }
