[package]
name = "ic_tee_identity_canister"
description = "An on-chain authentication service for Trusted Execution Environments (TEEs) on the Internet Computer."
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_identity_canister"
publish = false
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.6" }
ic_tee_nitro_attestation = { path = "../ic_tee_nitro_attestation", version = "0.6" }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-certification = { workspace = true }
ic_auth_types = { workspace = true }
ic_auth_verifier = { workspace = true }
ic-dummy-getrandom-for-wasm = "0.1"
