[package]
name = "ic_tee_logtail"
description = "A simple log tailing service for the TEE environment."
publish = false
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_logtail"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
