[package]
name = "ic_tee_nitro_attestation"
description = "A Rust library to process AWS Nitro enclave attestation"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_nitro_attestation"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
coset = { workspace = true }
x509-parser = { workspace = true, features = ["verify"] }
const-hex = { workspace = true }
ring = "0.17"

[dev-dependencies]
const-hex = { workspace = true }
