[package]
name = "ic_tee_nitro_gateway"
description = "A gateway service within an AWS Nitro enclave."
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_nitro_gateway"
publish = false
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
clap = { workspace = true }
const-hex = { workspace = true }
ciborium = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
candid = { workspace = true }
serde_bytes = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
hyper-util = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic-agent = { workspace = true }
ed25519-consensus = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
ic_auth_verifier = { workspace = true, features = ["full"] }
ic_tee_cdk = { path = "../ic_tee_cdk", version = "0.3" }
ic_tee_agent = { path = "../ic_tee_agent", version = "0.3" }
ic_tee_nitro_attestation = { path = "../ic_tee_nitro_attestation", version = "0.3" }
ic_tee_gateway_sdk = { path = "../ic_tee_gateway_sdk", version = "0.3" }

[dev-dependencies]
reqwest = { workspace = true }
