[package]
name = "ic_tee_sdk"
description = "A Rust library to make Trusted Execution Environments (TEEs) work with the Internet Computer"
repository = "https://github.com/ldclabs/ic-tee/tree/main/src/ic_tee_sdk"
publish = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
ic-canister-sig-creation = { workspace = true }
